# RostelecomTask1

./: README.md  pyproject.toml
rtc_task1/: email_sender.py  main.py  parser.py  selectors_list.py
rtc_task1/data/: config.json  listINN.txt
